Improve engine and templates.
Engine: multi-path entries, copy lifecycle.
Template: Capella, emf.